# Quad3DR

./: .gitignore  CMakeLists.txt  README.md  cmake.sh  cmake_jetson.sh  get_octomap.sh  make_jetson.sh
plane_sweep_stereo/: CMakeLists.txt
plane_sweep_stereo/src/: plane_sweep_test.cpp  plane_sweep_test_orig.cpp  plane_sweep_zed.cpp
quad_flight/: CMakeLists.txt  package.xml
quad_flight/cfg/: PositionController.cfg
quad_flight/config/: gimbal_control.yaml
quad_flight/launch/: buildings_flight_gazebo.launch  buildings_world.launch  display_quad.launch  moveit_test.launch  outdoor_flight_gazebo.launch  position_controller.launch  position_controller_with_teleop.launch  position_teleop.launch  start_world.launch  velocity_teleop.launch
quad_flight/rviz_cfg/: buildings_flight.rviz  outdoor_flight.rviz  urdf.rviz
quad_flight/src/: position_controller.cpp  position_teleop.cpp  velocity_teleop.cpp
quad_flight/test/: get_link_state.sh  pub_control.sh  set_link_state.sh
quad_flight/urdf/: camera_gimbal.urdf.xacro  camera_gimbal2.urdf.xacro  depth_camera.urdf.xacro  quadrotor_base.urdf.xacro  quadrotor_simple.urdf.xacro  quadrotor_test.gazebo  quadrotor_test.xacro  quadrotor_with_depth_camera.gazebo.xacro  quadrotor_with_depth_camera.urdf.xacro  utils.xacro  xacro_test.sh
quad_flight/worlds/: buildings.world  buildings.world.xacro  house1.sdf.xacro  house2.sdf.xacro  house3.sdf.xacro  xacro.sh
quad_planner/: CMakeLists.txt  LICENSE  octomap_trajectory.txt  package.xml
quad_planner/cmake/Modules/: Findglm.cmake
quad_planner/include/quad_planner/: optimizing_rrt_planner.h  quad_planner.h
quad_planner/scripts/: visualize_trajectory.py
quad_planner/src/: octomap_trajectory.txt  optimizing_rrt_planner.cpp  quad_planner.cpp  quad_planner_app.cpp  quad_planner_node.cpp
quad_planner/src/rendering/: lines.cpp  octomap_renderer.cpp  scene_object.cpp  shader_program.cpp  triangle_mesh.cpp  utilities.cpp  visualizer.cpp
quad_planner/src/shaders/: phong_shader.vertex  simple_fragment_shader.fragmentshader  simple_vertex_shader.vertexshader  vertex.shader
stereo/: CMakeLists.txt  cmake.sh
stereo/build_jetson/: CMakeCache.txt
stereo/cmake/Modules/: FindTCLAP.cmake
stereo/include/: dense_stereo_matcher.h  mLibInclude.h  sparse_stereo.h  sparse_stereo_matcher.h  sparse_stereo_matcher.hpp  stereo_calibration.h  utilities.h
stereo/src/: mLibSource.cpp  sparse_stereo_test.cpp  sparse_stereo_zed.cpp  stereo_calibration.cpp  stereo_calibration_tool_zed.cpp  stereo_capture_zed.cpp  utilities.cpp
video/: CMakeLists.txt
video/cmake/: CheckC11.cmake
video/cmake/Modules/: FindGStreamer.cmake  FindGStreamerWin.cmake
video/include/: video_source.h  video_source_opencv.h  video_source_zed.h
video/src/: GstMetaCorrespondence.cpp  StereoNetworkSensorClient.cpp  video_capture.cpp  video_capture_zed.cpp  video_source.cpp  video_source_opencv.cpp  video_source_zed.cpp  video_streamer.cpp  video_streamer_bundlefusion.cpp  video_streamer_bundlefusion_drone.cpp
video/tools/: make_all_pipeline_graphs.sh  make_pipeline_graph.sh  play_file.sh  receive_stream.sh  record_file.sh  run_with_graph.sh  send_stream.sh  send_zed_stream.sh
viewpoint_planner/: CMakeLists.txt  viewpoint_planner.cfg
viewpoint_planner/src/: colmap_database.h  dense_reconstruction.cpp  dense_reconstruction.h  depth_octomap.cpp  line_drawer.h  occupancy_map.cpp  occupancy_map.h  occupancy_map.hxx  occupancy_map_from_sens.cpp  occupancy_map_tree_navigator.hxx  occupancy_node.cpp  octomap_renderer.cpp  octomap_renderer.h  octree_drawer.cpp  octree_drawer.h  point_drawer.h  pose.h  qt_utils.h  scene_object.cpp  scene_object.h  shaders.qrc  shaders_offscreen.qrc  sparse_reconstruction.cpp  sparse_reconstruction.h  sparse_reconstruction_drawer.cpp  sparse_reconstruction_drawer.h  triangle_drawer.h  viewer_info_panel.ui  viewer_settings_panel.h  viewer_settings_panel.ui  viewer_widget.cpp  viewer_widget.h  viewer_window.cpp  viewer_window.h  viewpoint_planner.cpp  viewpoint_planner.h  viewpoint_planner_app.cpp  viewpoint_planner_window2.h  viewpoint_statistics_app.cpp  voxel_drawer.h
viewpoint_planner/src/ann/: approximate_nearest_neighbor.h
viewpoint_planner/src/bvh/: bvh.cu  bvh.cuh  bvh.h
viewpoint_planner/src/exe/: clip_mesh.cpp  clip_point_cloud.cpp  compute_ground_truth_mesh.cpp  create_baseline_viewpoint_path.cpp  create_colmap_mvs_files.cpp  evaluate_dense_points.cpp  fuse_point_cloud.cpp  image_match_invalidator.cpp  image_matcher.cpp  image_matcher_test.cpp  merge_viewpoint_paths.cpp  occupancy_map_from_colmap.cpp  occupancy_map_from_mesh.cpp  occupancy_map_from_sens.cpp  transform_mesh.cpp  viewpoint_planner_app.cpp  viewpoint_planner_cmdline.cpp  viewpoint_planner_gui.cpp
viewpoint_planner/src/graph/: graph.h  graph_boost.h
viewpoint_planner/src/mLib/: mLib.cpp  mLib.h
viewpoint_planner/src/octree/: occupancy_map.cpp  occupancy_map.h  occupancy_map.hxx  occupancy_node.cpp  occupancy_node.h
viewpoint_planner/src/planner/: motion_planner.h  occupied_tree.h  offscreen_octree_renderer.h  viewpoint.cpp  viewpoint.h  viewpoint_offscreen_renderer.cpp  viewpoint_offscreen_renderer.h  viewpoint_planner.cpp  viewpoint_planner.h  viewpoint_planner.hxx  viewpoint_planner_data.cpp  viewpoint_planner_data.h  viewpoint_planner_dump.cpp  viewpoint_planner_export.cpp  viewpoint_planner_graph.cpp  viewpoint_planner_graph.hxx  viewpoint_planner_motion.cpp  viewpoint_planner_opengl.cpp  viewpoint_planner_path.cpp  viewpoint_planner_path_tour.cpp  viewpoint_planner_raycast.cpp  viewpoint_planner_sampling.cpp  viewpoint_planner_scoring.cpp  viewpoint_planner_serialization.cpp  viewpoint_planner_serialization.h  viewpoint_planner_sparse_matching.cpp  viewpoint_planner_types.h  viewpoint_raycast.cpp  viewpoint_raycast.h  viewpoint_score.cpp  viewpoint_score.h
viewpoint_planner/src/reconstruction/: colmap_database.h  dense_reconstruction.cpp  dense_reconstruction.h  (+2 more)
viewpoint_planner/test/: CMakeLists.txt  test_ann.cpp  test_qt_image.cpp  test_se3_transform.cpp  test_vision.cpp  test_vision_qt.cpp
(+190 files in other folders)
